--- a/index.html
+++ b/index.html
@@ -1,22 +1,99 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>API</title>
+   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
+      integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
+   <!-- fontawesome -->
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+   <!-- datatable css-->
+   <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.4/css/jquery.dataTables.css">
    <!-- Global site tag (gtag.js) - Google Analytics -->
    <script async src="https://www.googletagmanager.com/gtag/js?id=G-5E3FSCMTS5"></script>
    <script>
-   window.dataLayer = window.dataLayer || [];
-   function gtag(){dataLayer.push(arguments);}
-   gtag('js', new Date());
+      window.dataLayer = window.dataLayer || [];
+      function gtag() { dataLayer.push(arguments); }
+      gtag('js', new Date());
 
-   gtag('config', 'G-5E3FSCMTS5');
+      gtag('config', 'G-5E3FSCMTS5');
    </script>
    <!-- Global site tag (gtag.js) - Google Analytics end-->
 </head>
+
 <body>
-   
+<div class="container">
+   <h2 class="text-center">來到農村住一晚-休閒農場住宿資訊</h2>
+   <p>引用網址 : https://data.gov.tw/dataset/6413</p>
+</div>
+   <div class="container">
+      <table class="table table-hover" id="table_id">
+         <thead>
+            <tr>
+               <td style="width:10%">Name</td>
+               <td style="width:10%">Photo</td>
+               <td style="width:20%">OpenHours</td>
+               <td style="width:3%">City</td>
+               <td style="width:20%">Address</td>
+               <td style="width:10%">Tel</td>
+               <td style="width:28%">HostWords</td>
+            </tr>
+         </thead>
+         <tbody>
+         </tbody>
+      </table>
+
+   </div>
+   <!-- 先載入 -->
+   <!-- bs4 載入slim 缺少ajax與effects -->
+
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
+      integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ=="
+      crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+      integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous">
+      </script>
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/js/bootstrap.min.js"
+      integrity="sha384-VHvPCCyXqtD5DqJeNxl2dtTyhF78xXNXdkwX1CZeRusQfRKp+tA7hAShOK/B/fQ2" crossorigin="anonymous">
+      </script>
+   <!-- 先載入 END-->
+   <!-- datatable -->
+   <script type="text/javascript" charset="utf8"
+      src="https://cdn.datatables.net/1.11.4/js/jquery.dataTables.js"></script>
+   <!-- datatable end -->
+   <script>
+      $(document).ready(function () {
+         $.ajax({
+            type: "post",
+            url: "https://data.coa.gov.tw/OpenData/Service/OpenData/ODwsv/ODwsvTravelStay.aspx",
+            dataType: "json",
+            success: function (data) {
+               console.log('hi');
+               console.log('data', data);
+               
+               for(let i = 0; i< data.length;i++){
+                  $('tbody').append(`
+                     <tr>
+                        <td><a href="${data[i]['Url']}" target="_blank">${data[i]['Name']}</a></td>
+                        <td><img src="${data[i]['Photo']}" style="width:100%"></td>
+                        <td>${data[i]['OpenHours']}</td>
+                        <td>${data[i]['City']}</td>
+                        <td>${data[i]['Address']}</td>
+                        <td>${data[i]['Tel']}</td>
+                        <td>${data[i]['HostWords']}</td>
+                     </tr>
+                  `);
+
+                  
+               }
+               $('#table_id').DataTable();
+            }
+         })
+      });
+   </script>
 </body>
+
 </html>
