--- a/index.html
+++ b/index.html
@@ -5,11 +5,14 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>API</title>
+   <title>來到農村住一晚-休閒農場住宿資訊</title>
+   <link rel="stylesheet" href="./css/style.css">
    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css"
       integrity="sha384-zCbKRCUGaJDkqS1kPbPd7TveP5iyJE0EjAuZQTgFLD2ylzuqKfdKlfG/eSrtxUkn" crossorigin="anonymous">
    <!-- fontawesome -->
-   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css"
+      integrity="sha512-9usAa10IRO0HhonpyAIVpjrylPvoDwiPUiKdWk5t3PyolY1cOd4DSE0Ga+ri4AuTroPR5aQvXU9xC6qOPnzFeg=="
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
    <!-- datatable css-->
    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/1.11.4/css/jquery.dataTables.css">
    <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -25,28 +28,90 @@
 </head>
 
 <body>
-<div class="container">
-   <h2 class="text-center">來到農村住一晚-休閒農場住宿資訊</h2>
-   <p>引用網址 : https://data.gov.tw/dataset/6413</p>
-</div>
+   <!-- nav start -->
    <div class="container">
-      <table class="table table-hover" id="table_id">
-         <thead>
-            <tr>
-               <td style="width:10%">Name</td>
-               <td style="width:10%">Photo</td>
-               <td style="width:20%">OpenHours</td>
-               <td style="width:3%">City</td>
-               <td style="width:20%">Address</td>
-               <td style="width:10%">Tel</td>
-               <td style="width:28%">HostWords</td>
-            </tr>
-         </thead>
-         <tbody>
-         </tbody>
-      </table>
-
+      <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: rgb(145, 187, 158);">
+         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
+            aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+         </button>
+         <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+            <a class="navbar-brand" href="#"><i class="fa-solid fa-hat-cowboy"></i></a>
+            <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+               <li class="nav-item active">
+                  <a class="nav-link" href="#">首頁</a>
+               </li>
+            </ul>
+            <!-- <form class="form-inline my-2 my-lg-0">
+                  <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
+                  <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+              </form> -->
+         </div>
+      </nav>
    </div>
+   <!-- nav end -->
+   <!-- back top -->
+   <div id="top">
+      <a href="#"><i class="fas fa-hand-point-up ">TOP</i></a>
+   </div>
+   <!-- back top end -->
+   <!-- carousel start -->
+   <div class="container">
+      <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
+         <ol class="carousel-indicators">
+            <li data-target="#carouselExampleCaptions" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="1"></li>
+            <li data-target="#carouselExampleCaptions" data-slide-to="2"></li>
+         </ol>
+         <div class="carousel-inner ">
+            <div class="carousel-item active">
+               <img src="./img/121313.jpg" class="d-block w-100" style="height:550px" alt="水族館">
+               <div class="carousel-caption d-none d-md-block" style="text-shadow:3px 3px 3px #2b2a2a;">
+                  <h3>乘載希望</h3>
+                  <p>讓我們在這裡，把夢想越盪越高。</p>
+               </div>
+            </div>
+            <div class="carousel-item">
+               <img src="./img/142131.jpg" class="d-block w-100" style="height:550px" alt="台北動物園">
+               <div class="carousel-caption d-none d-md-block" style="text-shadow:3px 3px 3px #2b2a2a;">
+                  <h3>芒芒眾生</h3>
+                  <p>在人海中要與你相遇，是多麼幸運的事。</p>
+               </div>
+            </div>
+            <div class="carousel-item">
+               <img src="./img/benjamin-davies-Zm2n2O7Fph4-unsplash.jpg" class="d-block w-100" style="height:550px"
+                  alt="動物">
+               <div class="carousel-caption d-none d-md-block" style="text-shadow:3px 3px 3px #2b2a2a;">
+                  <h3>共生共榮</h3>
+                  <p>體驗樸實、單純，我們能自給自足。</p>
+               </div>
+            </div>
+         </div>
+         <button class="carousel-control-prev" type="button" data-target="#carouselExampleCaptions" data-slide="prev">
+            <span class="fas fa-arrow-circle-left fa-3x" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+         </button>
+         <button class="carousel-control-next fa-3x" type="button" data-target="#carouselExampleCaptions"
+            data-slide="next">
+            <span class="fas fa-arrow-circle-right" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+         </button>
+      </div>
+   </div>
+   <!-- carousel end -->
+
+   <!-- footer -->
+   <footer class="container">
+      <div class="row">
+         <div class="col-12 h6 p-3 text-center">
+            <p>&copy; Cactus月 2022 <br>
+            參考資料 : 政府開放資料平台 - 行政院農委會 <a href="https://data.gov.tw/dataset/6413" class="text-light"><i class="fa-solid fa-link"></i></a>
+            </p>
+         </div>
+      </div>
+   </footer>
+   <!-- footer end -->
+
    <!-- 先載入 -->
    <!-- bs4 載入slim 缺少ajax與effects -->
 
@@ -73,23 +138,23 @@
             success: function (data) {
                console.log('hi');
                console.log('data', data);
-               
-               for(let i = 0; i< data.length;i++){
-                  $('tbody').append(`
-                     <tr>
-                        <td><a href="${data[i]['Url']}" target="_blank">${data[i]['Name']}</a></td>
-                        <td><img src="${data[i]['Photo']}" style="width:100%"></td>
-                        <td>${data[i]['OpenHours']}</td>
-                        <td>${data[i]['City']}</td>
-                        <td>${data[i]['Address']}</td>
-                        <td>${data[i]['Tel']}</td>
-                        <td>${data[i]['HostWords']}</td>
-                     </tr>
-                  `);
 
-                  
-               }
-               $('#table_id').DataTable();
+               // for(let i = 0; i< data.length;i++){
+               //    $('tbody').append(`
+               //       <tr>
+               //          <td><a href="${data[i]['Url']}" target="_blank">${data[i]['Name']}</a></td>
+               //          <td><img src="${data[i]['Photo']}" style="width:100%"></td>
+               //          <td>${data[i]['OpenHours']}</td>
+               //          <td>${data[i]['City']}</td>
+               //          <td>${data[i]['Address']}</td>
+               //          <td>${data[i]['Tel']}</td>
+               //          <td>${data[i]['HostWords']}</td>
+               //       </tr>
+               //    `);
+
+
+               // }
+               // $('#table_id').DataTable();
             }
          })
       });
