--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
       gtag('config', 'G-5E3FSCMTS5');
    </script>
    <!-- Global site tag (gtag.js) - Google Analytics end-->
+
 </head>
 
 <body>
@@ -44,7 +45,7 @@
             </ul>
             <!-- <form class="form-inline my-2 my-lg-0">
                   <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                  <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
+                  <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
               </form> -->
          </div>
       </nav>
@@ -65,21 +66,21 @@
          </ol>
          <div class="carousel-inner ">
             <div class="carousel-item active">
-               <img src="./img/121313.jpg" class="d-block w-100" style="height:550px" alt="水族館">
+               <img src="./img/121313.jpg" class="d-block w-100" style="height:500px" alt="水族館">
                <div class="carousel-caption d-none d-md-block" style="text-shadow:3px 3px 3px #2b2a2a;">
                   <h3>乘載希望</h3>
                   <p>讓我們在這裡，把夢想越盪越高。</p>
                </div>
             </div>
             <div class="carousel-item">
-               <img src="./img/142131.jpg" class="d-block w-100" style="height:550px" alt="台北動物園">
+               <img src="./img/142131.jpg" class="d-block w-100" style="height:500px" alt="台北動物園">
                <div class="carousel-caption d-none d-md-block" style="text-shadow:3px 3px 3px #2b2a2a;">
                   <h3>芒芒眾生</h3>
                   <p>在人海中要與你相遇，是多麼幸運的事。</p>
                </div>
             </div>
             <div class="carousel-item">
-               <img src="./img/benjamin-davies-Zm2n2O7Fph4-unsplash.jpg" class="d-block w-100" style="height:550px"
+               <img src="./img/benjamin-davies-Zm2n2O7Fph4-unsplash.jpg" class="d-block w-100" style="height:500px"
                   alt="動物">
                <div class="carousel-caption d-none d-md-block" style="text-shadow:3px 3px 3px #2b2a2a;">
                   <h3>共生共榮</h3>
@@ -99,7 +100,25 @@
       </div>
    </div>
    <!-- carousel end -->
+<!-- main -->
+<div class="container">
+   <div class="row mt-3">
+      <div class="col-12">
+         <table id="table_id" class="table table-striped">
+            <thead>
+               <tr>
+                   <th style="width:20%">名稱</th>
+                   <th style="width:10%">開放時間</th>
+                   <th style="width:70%">介紹</th>
+               </tr>
+           </thead>
+           <tbody>
+           </tbody>
+         </table>
+      </div>
 
+</div>
+<!-- main end -->
    <!-- footer -->
    <footer class="container">
       <div class="row">
@@ -113,6 +132,7 @@
    <!-- footer end -->
 
    <!-- 先載入 -->
+  
    <!-- bs4 載入slim 缺少ajax與effects -->
 
    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"
@@ -129,6 +149,7 @@
    <script type="text/javascript" charset="utf8"
       src="https://cdn.datatables.net/1.11.4/js/jquery.dataTables.js"></script>
    <!-- datatable end -->
+
    <script>
       $(document).ready(function () {
          $.ajax({
@@ -139,22 +160,21 @@
                console.log('hi');
                console.log('data', data);
 
-               // for(let i = 0; i< data.length;i++){
-               //    $('tbody').append(`
-               //       <tr>
-               //          <td><a href="${data[i]['Url']}" target="_blank">${data[i]['Name']}</a></td>
-               //          <td><img src="${data[i]['Photo']}" style="width:100%"></td>
-               //          <td>${data[i]['OpenHours']}</td>
-               //          <td>${data[i]['City']}</td>
-               //          <td>${data[i]['Address']}</td>
-               //          <td>${data[i]['Tel']}</td>
-               //          <td>${data[i]['HostWords']}</td>
-               //       </tr>
-               //    `);
+               for(let i = 0; i< data.length;i++){
 
-
-               // }
-               // $('#table_id').DataTable();
+                  $('tbody').append(`
+                  <tr>
+                     <td><img src="${data[i]['Photo']}" style="width:100%">
+                        <p class="mt-3 text-center h5"><a href="${data[i]['Url']}" target="_blank">${data[i]['Name']}</p></a></td>
+                     <td>${data[i]['OpenHours']}</td>
+                     <td><span style='color:#076942;'>
+                        <i class="fa-solid fa-location-dot"></i>${data[i]['City']},${data[i]['Address']}</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+                     <span style='color:#691707;'><i class="fa-solid fa-square-phone"></i>${data[i]['Tel']}</span>
+                     <p class="mt-2">${data[i]['HostWords']}</p></td>
+                  </tr>
+                    `);
+               }
+               $('#table_id').DataTable();
             }
          })
       });
