--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 <body>
    <!-- nav start -->
    <div class="container">
-      <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: rgb(145, 187, 158);">
+      <nav class="navbar navbar-expand-lg navbar-light fixed-top" style="background-color: rgb(128, 153, 136);">
          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01"
             aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -43,6 +43,7 @@
                   <a class="nav-link" href="#">首頁</a>
                </li>
             </ul>
+            <div class="float-right">來到農村住一晚</div>
             <!-- <form class="form-inline my-2 my-lg-0">
                   <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
                   <button class="btn btn-outline-dark my-2 my-sm-0" type="submit">Search</button>
@@ -53,7 +54,7 @@
    <!-- nav end -->
    <!-- back top -->
    <div id="top">
-      <a href="#"><i class="fas fa-hand-point-up ">TOP</i></a>
+      <a href="#" style="color: rgb(2, 36, 22);"><i class="fas fa-hand-point-up ">TOP</i></a>
    </div>
    <!-- back top end -->
    <!-- carousel start -->
@@ -104,11 +105,12 @@
 <div class="container">
    <div class="row mt-3">
       <div class="col-12">
-         <table id="table_id" class="table table-striped">
+         <table id="table_id" class="table table-success table-striped">
             <thead>
                <tr>
+                   <th style="width:2%"></th>
                    <th style="width:20%">名稱</th>
-                   <th style="width:10%">開放時間</th>
+                   <th style="width:8%">開放時間</th>
                    <th style="width:70%">介紹</th>
                </tr>
            </thead>
@@ -164,10 +166,11 @@
 
                   $('tbody').append(`
                   <tr>
-                     <td><img src="${data[i]['Photo']}" style="width:100%">
-                        <p class="mt-3 text-center h5"><a href="${data[i]['Url']}" target="_blank">${data[i]['Name']}</p></a></td>
-                     <td>${data[i]['OpenHours']}</td>
-                     <td><span style='color:#076942;'>
+                     <td>${i+1}</td>
+                     <td><img src="${data[i]['Photo']}" class='my-5' style="width:100%">
+                        <p class=" text-center h5"><a href="${data[i]['Url']}" target="_blank">${data[i]['Name']}</p></a></td>
+                     <td style='color:#706c6c'>${data[i]['OpenHours']}</td>
+                     <td><span style='color:#3042ab;'>
                         <i class="fa-solid fa-location-dot"></i>${data[i]['City']},${data[i]['Address']}</span>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
                      <span style='color:#691707;'><i class="fa-solid fa-square-phone"></i>${data[i]['Tel']}</span>
                      <p class="mt-2">${data[i]['HostWords']}</p></td>
